[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
[project]
name = "togaAudioPlayer"
license ="BSD-3-Clause"
version = "0.1.3"
description = "A simple audio player widget for Toga"
authors = [
    {name = "234568976543546576543", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["toga", "audio", "player"]
classifiers = [
    "Development Status :: 3 - Alpha",
    
    "Programming Language :: Python :: 3",

    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]
dependencies = [
    "toga"
]